--- a/Plugins/NGPCarMenu.ini
+++ b/Plugins/NGPCarMenu.ini
@@ -516,6 +516,7 @@ CockpitWipers_VR = 0
 CockpitCameraShaking_VR=1
 CockpitOverrideFOV_VR=1
 CockpitOverrideFOVValue_VR=2.4
+HideGetReadyMessage=0
 
 
 ;
