--- a/RallySimFans.ini
+++ b/RallySimFans.ini
@@ -17,13 +17,13 @@ pausecountdown = true
 pausecountdownreleasebuttons = 3
 practice_damage = 3
 practice_pacecar = 0
-racehud = 0
+racehud = 1
 rallyseason_active = false
 rallyseason_difficulty_level = 15
 rallyseason_theme = WRC2019
 show_advanced_options = false
-telemetry_motec_conversion=false
-telemetry_keeponly_motec=false
+telemetry_keeponly_motec = false
+telemetry_motec_conversion = false
 
 [login]
 auto = true
