--- a/RichardBurnsRally.ini
+++ b/RichardBurnsRally.ini
@@ -36,7 +36,7 @@ telemetryTics = 5
 udpTelemetry =1
 udpTelemetryAddress = 127.0.0.1
 udpTelemetryPort = 6776
-fullscreenWindow=false
+fullscreenWindow=true
 fixAspectRatio=1
 highQualityCubicEnvironmentMaps=0
 fixVSync=1
@@ -64,9 +64,9 @@ RenderCarShadow = true
 RenderQuality = high
 RunIntro =false
 RunStartup =false
-ShowFPS = false
+ShowFPS =false
 Sound = true
-UseCubicEnvironmentMaps = true
+UseCubicEnvironmentMaps =false
 UseEAX = false
 UseSoftwareAudio = false
 UseTrackIR = false
@@ -75,7 +75,7 @@ WaitRetrace = true
 XRes =1920
 YRes =1080
 
-UseCubicEnvironmentMaps_replay=true
+UseCubicEnvironmentMaps_replay=false
 RenderQuality_replay=high
 BTBRenderQuality=high
 BTBRenderQuality_replay=high
