--- a/rallysimfans_personal.ini
+++ b/rallysimfans_personal.ini
@@ -2911,3 +2911,41 @@ forcefeedbacksensitivitysnow=
 setuptarmac=
 setupgravel=
 setupsnow=
+
+[car106]
+name=Skoda Fabia RS Rally2
+rbrvr_seat0=
+rbrvr_seat1=
+rbrvr_seat2=
+fulldashposition_2d=
+fulldashposition_vr=
+steeringrotation=
+fmod_mastervolume=
+forcefeedbacksensitivitytarmac=
+forcefeedbacksensitivitygravel=
+forcefeedbacksensitivitysnow=
+setuptarmac=tarmac_FabiaRS_N.Gryazin
+setupgravel=gravel_FabiaRS_N.Gryazin
+setupsnow=
+
+[stage532]
+name=Wythop
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
+
+[stage485]
+name=Woliborz - Jodlownik
+renderquality=
+renderquality_replay=
+particlequality=
+particlequality_replay=
+rendercarshadow=
+rendercarshadow_replay=
+usecubicenvironmentmaps=
+usecubicenvironmentmaps_replay=
