--- a/rsf_launcher/Configs/default.ini
+++ b/rsf_launcher/Configs/default.ini
@@ -4,17 +4,17 @@ ShowAdvancedOptions=true
 UseDXVK=
 UseDXVKMode=2
 AppMaximized=0
-AppLocation=876 261
+AppLocation=1380 502
 AppSize=1006 728
 HideWelcomeTips=1
 RSFLauncherLang=en
 SteeringFFBRegFix=0
 DXVKDriverVersion=0
-FullscreenMode_VR=2
+FullscreenMode_VR=0
 FullscreenMode=2
 AntiAliasing=Off
 AntiAliasingVR=SRS x2
-VRPluginType=2
+VRPluginType=1
 VRLockToHorizon=0
 VRDrawDesktopWindow=1
 ShowInGameRaceClock=0
@@ -86,6 +86,7 @@ Default.CockpitWipers_VR=0
 Default.CockpitCameraShaking_VR=1
 Default.CockpitOverrideFOVValue_VR=2.4
 Default.CockpitOverrideFOV_VR=1
+Default.HideGetReadyMessage=0
 [Plugins]
 FixUp.Enabled=true
 NGPCarMenu.Enabled=False
@@ -110,8 +111,8 @@ OverrideResolution=true
 VRXRes=1920
 VRYRes=1080
 Digidash2DVRPositions=true
-2DXRes=1920
-2DYRes=1080
+2DXRes=2560
+2DYRes=1440
 Settings.camLockHorizon=0
 Settings.noDesktop=0
 [RichardBurnsRally]
@@ -121,7 +122,7 @@ Settings.Fullscreen=false
 Settings.ParticleQuality=high
 Settings.RenderCarShadow=true
 Settings.RenderQuality=high
-Settings.UseCubicEnvironmentMaps=true
+Settings.UseCubicEnvironmentMaps=false
 Settings.XRes=1920
 Settings.YRes=1080
 FullDigidashRaceStyle=Disabled
@@ -143,11 +144,11 @@ Settings.BTBRenderQuality_replay=high
 Settings.ParticleQuality_replay=high
 Settings.RenderCarShadow_replay=true
 Settings.RenderQuality_replay=high
-Settings.UseCubicEnvironmentMaps_replay=true
+Settings.UseCubicEnvironmentMaps_replay=false
 NGP.adaptiveFFB=1
 NGP.ffbBufferCycles=1
 NGP.ffbMinFPS=58
-NGP.fullscreenWindow=false
+NGP.fullscreenWindow=true
 NGP.headGasketDurability=10
 NGP.highQualityCubicEnvironmentMaps=0
 NGP.vSyncActive=0
@@ -193,6 +194,15 @@ GaugesHUDStyle=1
 GaugesHUDStyle_Replay=1
 TireHUDStyle=1
 TireHUDStyle_Replay=0
+OverlayHUDStyle=1
+OverlayHUDStyle_Replay=1
+GAUGES.compatability_mode=0
+GAUGES.enabled=1
+GAUGES.replayenabled=1
+overlays.enabled=1
+overlays.inraceoverlay=default_in_race.ini
+overlays.inreplayoverlay=default_in_replay.ini
+overlays.replayenabled=1
 [CarDamageHUD]
 MAIN.Enabled=1
 [DamagedPartTableHUD]
@@ -218,8 +228,8 @@ DXVK.d3d9.forceSwapchainMSAA=2
 .lockToHorizon=0
 .superSampling=1.35
 .desktopWindowMode='vreye'
-.runtime='openxr'
-gfx.default.superSampling=1.3
+.runtime='steamvr'
+gfx.default.superSampling=1.35
 OpenXR.quadViewRendering=false
 [openRBRTriples]
 Enabled=false
@@ -232,3 +242,5 @@ CenterYRes=0
 RightXRes=0
 RightYRes=0
 SavedCubicEnvMapsValue=1
+LeftScreenEnabled=true
+RightScreenEnabled=true
