--- a/rallysimfans_personal.ini
+++ b/rallysimfans_personal.ini
@@ -2949,3 +2949,19 @@ rendercarshadow=
 rendercarshadow_replay=
 usecubicenvironmentmaps=
 usecubicenvironmentmaps_replay=
+
+[car107]
+name=Toyota GR Yaris Rally2
+rbrvr_seat0=
+rbrvr_seat1=
+rbrvr_seat2=
+fulldashposition_2d=
+fulldashposition_vr=
+steeringrotation=
+fmod_mastervolume=
+forcefeedbacksensitivitytarmac=
+forcefeedbacksensitivitygravel=
+forcefeedbacksensitivitysnow=
+setuptarmac=
+setupgravel=gravel_GRYaris_2025-02-21_Vasgabi
+setupsnow=107_d_snow
