--- a/rsf_launcher/Configs/default.ini
+++ b/rsf_launcher/Configs/default.ini
@@ -14,7 +14,7 @@ FullscreenMode_VR=0
 FullscreenMode=2
 AntiAliasing=Off
 AntiAliasingVR=SRS x2
-VRPluginType=1
+VRPluginType=2
 VRLockToHorizon=0
 VRDrawDesktopWindow=1
 ShowInGameRaceClock=0
@@ -228,7 +228,7 @@ DXVK.d3d9.forceSwapchainMSAA=2
 .lockToHorizon=0
 .superSampling=1.35
 .desktopWindowMode='vreye'
-.runtime='steamvr'
+.runtime='openxr'
 gfx.default.superSampling=1.35
 OpenXR.quadViewRendering=false
 [openRBRTriples]
